# Ark

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json
.github/: pull_request_template.md
app/: .dockerignore  .gitignore  Dockerfile  README.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml
desktop/: Cargo.toml  apple-dynamic-island-research.md
desktop/.cargo/: config.toml
desktop/chat-ui/: index.html  package-lock.json  package.json  vite.config.ts
desktop/chat-ui/src/: App.tsx  ChatPanel.tsx  FileChip.tsx  InputBar.tsx  NotificationIsland.tsx  SearchResultCard.tsx  StandardIsland.tsx  main.tsx  styles.css  useChat.ts  useIsland.ts
desktop/docs/: island-redesign-proposal.md
desktop/island/: Cargo.toml  build.rs
desktop/island/src/: main.rs
desktop/island/src/core/: ai_client.rs  audio.rs  capture.rs  command.rs  config.rs  file_client.rs  lyrics.rs  mod.rs  music_client.rs  persistence.rs  player.rs  render.rs  smtc.rs  tool_client.rs  types.rs
desktop/island/src/ui/: bubble.rs  mod.rs  utils.rs
desktop/island/src/ui/activities/: ai.rs  filedrop.rs  mod.rs  music.rs
desktop/island/src/utils/: clipboard.rs  color.rs  mod.rs  mouse.rs  physics.rs
desktop/island/src/window/: app.rs  mod.rs  music_settings.rs  settings.rs  tray.rs
desktop/launcher/: Cargo.toml
desktop/launcher/src/: main.rs
desktop/shared/: Cargo.toml
desktop/shared/src/: config.rs  ipc.rs  lib.rs  pipe.rs
desktop/tauri-app/: Cargo.toml  build.rs  tauri.conf.json
desktop/tauri-app/src/: commands.rs  ipc_bridge.rs  main.rs  state.rs  window_mgr.rs
docs/: AGENT_DEPLOYMENT.md  API_PLATFORM.md  ARCHITECTURE_DESIGN.md  (+15 more)
sdk/python/: README.md  pyproject.toml
sdk/python/ark_sdk/: __init__.py  client.py
(+430 files in other folders)
