[workspace]
resolver = "2"
members = ["island", "shared", "launcher"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
windows = "0.58"
