[package]
name = "omniagent-tauri"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
omniagent-shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
ureq = { version = "2", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
