[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ark-sdk"
version = "0.1.0"
description = "Thin official Python client for the Ark execution API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["ark_sdk*"]

